Fix all PMD and build errors; refactor for code quality and successful build